force-app/main/fat/objects/ApexLogger__c/ApexLogger__c.object-meta.xml
<CustomObject>
    <label>ApexLogger</label>
    <nameField>
        <label>ApexLogger ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApexLoggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>