force-app/main/fat/objects/ApexLogger__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>