force-app/main/fat/objects/ApexLogger__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>